apps/kubernetes/rancher-demo/rancher-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher-demo-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: hello-world
  ports:
    - name: web
      port: 8080
      targetPort: web
      nodePort: 31117
