apps/kubernetes/rancher-demo/rancher-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-demo-ingress
  namespace: default
spec:
  rules:
  - host: rancher-demo.home
    http:
      paths:
      - backend:
          service:
            name: rancher-demo-nodeport
            port:
              number: 8080
        path: /
        pathType: Prefix
